hphp/test/zend/good/tests/lang/bug24573.php.expectf
Fatal error: Invalid use of `$this`: it cannot be re-assigned in %s/test/zend/good/tests/lang/bug24573.php on line 6